--- a/website/bubble.html
+++ b/website/bubble.html
@@ -11,12 +11,6 @@
 </head>
 <body>
     <script type="text/javascript" src="topic_count.js"></script>
-	<script type="text/javascript" src="bubble.js">
-
-        
-
-
-
-	</script>
+	<script type="text/javascript" src="bubble.js"></script>
 </body>
 </html>
